PBSuite_15.8.25
	Removed old executables:
          MakeOverlapTable.py
          MakeReciprocal.py
          Polish.py
          OLCAssembly.py
          chunkyBlasr.py
	
	Added --reportContigs to spots so that you can see the contig created
	that called your spot if you want. By default it's off.

	Added downsampling to Honey.py asm instead of failing when too many
	reads were present. - and only for Illumina reads

	Added new parameters for minimum gap inflation size for Jelly 
	Fixed an error where we weren't correctly using the -sa index for
	Jelly mapping across all jobs
	Corrected an error where single extend from 5' end captured gap
	filling wasn't having the consensus bases correctly placed

	Fixed a pysam cfaidx exception caused by SVs in Honey spots being
	discovered within --buffer distance of reference start thus raising
	an IndexError:start out of range(<some negative number>)

PBSuite_15.2.20.p1
        Quick patch for bugs.
        -- GAPLIMIT Exception is fixed
        File "PBSuite_15.2.20/bin/Collection.py", line 181, in getSequence
        if gapLen < self.GAPINFLATE:
        AttributeError: FillingMetrics instance has no attribute 'GAPINFLATE'

        Safety for sawriter
        If sawriter wasn't in the environment, the setup stage executed 
        silently when it should have raised errors. 
        The mapping stage now ensures the reference.sa exists, if not, it's 
        excluded from the blasr parameters. This will just make mapping 
        slower, not crash.

PBSuite_15.2.20

    Utils 
	Command Runner now actually kills timed out forked processes. 
	Added bamToFastq.py and fixed bamToFastq so that it
		reverse-compliments sequences
	BamStat.py now has a prettier report and can read from sys.stdin
		(e.g. samtools view input.bam 15:19428-19692 | BamStat.py)

    PBHoney
	Spots has been refactored to be faster, more informative, and a 
		more accurate
	Spots now calls a consensus and gets a more accurate breakpoint. 