@@ -1,6 +1,6 @@
 #/bin/bash
 
-source /hgsc_software/PBSuite/pbsuiteVirtualEnv/bin/activate
+#source /hgsc_software/PBSuite/pbsuiteVirtualEnv/bin/activate
 
 #This is the path where you've install the suite.
 export SWEETPATH=/stornext/snfs5/next-gen/scratch/english/Jelly/DevJelly/trunk
